[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name    = "squish-quant"
version = "0.1.0"
requires-python = ">=3.10"
description     = "High-throughput INT8 quantizer for Squish LLM compression"
readme          = "README.md"

[tool.maturin]
# pyo3/extension-module: builds a native Python extension (.so/.dylib)
# simd-neon: enables explicit ARM NEON SIMD paths on Apple Silicon
# Both must be present; simd-neon is gated on the target arch at compile time
features       = ["pyo3/extension-module", "simd-neon"]
module-name    = "squish_quant"
